# fys4411

./: .gitignore  myst.yml  pyproject.toml
project_1/code/: bose_harmonic.py  bose_harmonic_jax.py  bose_repulsive.py  bose_repulsive_jax.py  calc_a.ipynb  calc_b.ipynb  calc_c.ipynb  calc_d.ipynb  calc_de.ipynb  calc_g.ipynb  calc_h.ipynb  density.py  diff.py  io_utils.py  param_store.json  stats.py  structs.py  utils.py  vmc.py  vmc_jax.py
project_1/report/: references.bib  report.md
report_template/: README.md  template.tex  template.yml
